<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="bot_nav_main">Главное</string>
    <string name="bot_nav_favorites">Избранное</string>
    <string name="bot_nav_team">Команда</string>
    <string name="text_team">Команда</string>
    <string name="text_developers_worked">Над приложением\nработали</string>
    <string name="developers">Юлия Басалыгина\n\nМихаил Баландин\n\nПавел Давыдов\n\nВасилий Золотарев\n\nРуслан Коротнев</string>

    <plurals name="count_postfix_found">
        <item quantity="zero">Найдено</item>
        <item quantity="one">Найдена</item>
        <item quantity="few">Найдено</item>
        <item quantity="many">Найдено</item>
        <item quantity="other">Найдено</item>
    </plurals>
    <plurals name="count_postfix_vacancy">
        <item quantity="zero">вакансий</item>
        <item quantity="one">вакансия</item>
        <item quantity="few">вакансии</item>
        <item quantity="many">вакансий</item>
        <item quantity="other">вакансий</item>
    </plurals>
    <!--Пример использования:
   vacancyField.text = context.resources.getQuantityString(R.plurals.vacancy_postfix, vacancyCount, vacancyCount)-->

    <!--Строки для экрана поиска-->
    <string name="search_vacancy">Поиск вакансий</string>
    <string name="search_request">Введите запрос</string>
    <string name="no_vacancies">Таких вакансий нет</string>
    <string name="no_internet">Нет интернета</string>
    <string name="nothing_found">Не удалось получить список вакансий</string>
    <string name="error">Ошибка сервера</string>
    <string name="company_logo_description">Логотип компании</string>
    <string name="filter_description">Добавить фильтр</string>
    <string name="clear_description">Очистить окно ввода</string>
    <string name="check_internet">Проверьте подключение к интернету</string>
    <string name="error_occupied">Произошла ошибка</string>
    <string name="end_of_list">Достигнут конец списка</string>
    <string name="unknown_currency">Неизвестная валюта</string>

    <!--Строки для экрана избранного-->
    <string name="favorite">Избранное</string>
    <string name="favorite_empty">Список пуст</string>
    <string name="favorire_error">Не удалось получить список вакансий</string>

    <!--Строки для экрана детали вакансий-->
    <string name="vacancy">Вакансия</string>
    <string name="required_xp">Требуемый опыт</string>
    <string name="vacancy_description">Описание вакансии</string>
    <string name="key_skills">Ключевые навыки</string>
    <string name="vacancy_error">Вакансия не найдена или\n удалена</string>
    <string name="vacancy_error_server">Ошибка сервера</string>

    <!--Строки для экрана настроек фильтрации-->
    <string name="filter_settings">Настройки фильтрации</string>
    <string name="workplace">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="enter_amount">Введите сумму</string>
    <string name="dont_show_without_salary">Не показывать без зарплаты</string>
    <string name="apply">Применить</string>
    <string name="reset">Сбросить</string>

    <!--Строки для экрана выбора места работы-->
    <string name="select_place_work">Выбор места работы</string>
    <string name="country">Страна</string>
    <string name="region">Регион</string>
    <string name="select_country">Выбор страны</string>
    <string name="select_region">Выбор региона</string>
    <string name="input_region">Введите регион</string>
    <string name="no_such_region">Такого региона нет</string>

    <!--Строки для экрана выбора отрасли-->
    <string name="choose_industry">Выбор отрасли</string>
    <string name="industry_hint">Введите отрасль</string>
    <string name="error_industry">Не удалось получить\nсписок</string>
    <string name="industry_button_text">Выбрать</string>
    <string name="select_text">Выбрать</string>
    <string name="no_such_industry">Такой отрасли нет</string>
</resources>
