<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".ui.root.team.TeamFragment">

    <ImageView
        android:id="@+id/mask"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_24dp"
        android:src="@drawable/mask"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_team"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_64dp"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/mask"
        android:textSize="@dimen/size_22sp"
        style="@style/fragment_team_style"
        android:gravity="center_vertical"
        android:text="@string/text_team" />

    <TextView
        android:id="@+id/text_developers_worked"
        style="@style/fragment_team_style"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_92dp"
        android:gravity="center_vertical"
        android:text="@string/text_developers_worked"
        android:textSize="@dimen/size_32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/text_team" />

    <TextView
        android:id="@+id/developers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_24dp"
        style="@style/fragment_team_style"
        android:textSize="@dimen/size_16sp"
        app:layout_constraintTop_toBottomOf="@id/text_developers_worked"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        android:text="@string/developers"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/size_16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/size_8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
