<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_64dp"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_arrow_back"
        android:background="@null"
        app:tint="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/text_filter"
        style="@style/TextStyleMedium"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_64dp"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="@dimen/size_16dp"
        android:text="@string/filter_settings"
        tools:ignore="RtlSymmetry" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/workplaceLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60dp"
        android:layout_marginTop="@dimen/size_16dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/text_filter">

        <TextView
            android:id="@+id/workplace"
            style="@style/InputValueStyle"
            app:layout_constraintStart_toStartOf="@+id/workplaceLayout"
            app:layout_constraintEnd_toEndOf="@+id/workplaceLayout"
            app:layout_constraintTop_toTopOf="@+id/workplaceLayout"
            android:textColor="?attr/colorOnSecondary"
            android:text="@string/workplace" />

        <TextView
            android:id="@+id/subtitleWorkplace"
            style="@style/TextStyleRegular"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/workplaceLayout"
            app:layout_constraintTop_toTopOf="@id/workplaceLayout"
            android:layout_marginTop="@dimen/size_14dp"
            android:textSize="@dimen/size_12sp"
            android:text="@string/workplace" />

        <TextView
            android:id="@+id/inputWorkplace"
            style="@style/TextStyleRegular"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/workplaceLayout"
            app:layout_constraintTop_toBottomOf="@id/subtitleWorkplace"
            tools:text="Москва" />

        <ImageButton
            android:id="@+id/deleteWorkplace"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_60dp"
            android:importantForAccessibility="no"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/workplaceLayout"
            app:layout_constraintTop_toTopOf="@+id/workplaceLayout"
            android:src="@drawable/ic_close"
            android:background="@null"
            app:tint="?attr/colorOnPrimary"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/industryLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/workplaceLayout">

        <TextView
            android:id="@+id/industry"
            style="@style/InputValueStyle"
            app:layout_constraintStart_toStartOf="@+id/industryLayout"
            app:layout_constraintEnd_toEndOf="@+id/industryLayout"
            app:layout_constraintTop_toTopOf="@+id/industryLayout"
            android:textColor="?attr/colorOnSecondary"
            android:text="@string/industry" />

        <TextView
            android:id="@+id/subtitleIndustry"
            style="@style/TextStyleRegular"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/industryLayout"
            app:layout_constraintTop_toTopOf="@id/industryLayout"
            android:layout_marginTop="@dimen/size_14dp"
            android:textSize="@dimen/size_12sp"
            android:text="@string/industry" />

        <TextView
            android:id="@+id/inputIndustry"
            style="@style/TextStyleRegular"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/industryLayout"
            app:layout_constraintTop_toBottomOf="@id/subtitleIndustry"
            tools:text="IT" />

        <ImageButton
            android:id="@+id/deleteIndustry"
            android:layout_width="wrap_content"
            android:importantForAccessibility="no"
            android:visibility="gone"
            android:layout_height="@dimen/size_60dp"
            app:layout_constraintEnd_toEndOf="@+id/industryLayout"
            app:layout_constraintTop_toTopOf="@+id/industryLayout"
            android:src="@drawable/ic_close"
            android:background="@null"
            app:tint="?attr/colorOnPrimary"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/salary"
        style="@style/TextStyleRegular"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:layout_marginTop="@dimen/size_24dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/industryLayout"
        android:background="@drawable/background_edit_text_search"
        android:backgroundTint="?attr/colorSurfaceContainer"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="number"
        android:hint="@string/enter_amount"
        android:textCursorDrawable="@drawable/ic_cursor"
        android:textColorHint="?attr/colorOnSecondary"
        android:paddingStart="@dimen/size_16dp"
        android:paddingBottom="@dimen/size_8dp"
        android:gravity="bottom"
        tools:ignore="Autofill,RtlSymmetry" />

    <TextView
        android:id="@+id/expectedSalary"
        style="@style/TextStyleRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_8dp"
        android:layout_marginStart="@dimen/size_16dp"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/salary"
        android:background="@null"
        android:textColor="?attr/colorOnSecondary"
        android:text="@string/expected_salary"
        android:textSize="@dimen/size_12sp"/>

    <ImageButton
        android:id="@+id/deleteSalary"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_50dp"
        android:visibility="gone"
        android:layout_marginEnd="@dimen/size_16dp"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@+id/salary"
        android:src="@drawable/ic_close"
        android:background="@null"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/dontShowWithoutSalary"
        style="@style/TextStyleRegular"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_60dp"
        android:layout_marginTop="@dimen/size_24dp"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/salary"
        android:background="@null"
        android:text="@string/dont_show_without_salary" />

    <ImageButton
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_60dp"
        android:layout_marginTop="@dimen/size_24dp"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/salary"
        android:src="@drawable/ic_check_box_unmark"
        android:background="@null"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/apply"
        style="@style/ButtonStyle"
        android:visibility="visible"
        android:layout_marginBottom="@dimen/size_8dp"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintBottom_toTopOf="@+id/reset"
        android:text="@string/apply"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reset"
        style="@style/ButtonStyle"
        android:visibility="visible"
        android:layout_marginBottom="@dimen/size_24dp"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/reset"
        android:textColor="@color/red"/>

</androidx.constraintlayout.widget.ConstraintLayout>
