<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <LinearLayout
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--Кнопка Назад-->
        <ImageView
            android:id="@+id/back_img"
            style="@style/VacancyIconsStyle"
            android:layout_marginVertical="@dimen/size_8dp"
            android:layout_marginStart="@dimen/size_4dp"
            android:src="@drawable/ic_arrow_back" />

        <!--Заголовок-->
        <TextView
            android:id="@+id/head_vacancy"
            style="@style/TextStyleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="19dp"
            android:layout_marginStart="@dimen/size_4dp"
            android:text="@string/choose_industry" />
    </LinearLayout>

    <!--Поиск-->
    <View
        android:id="@+id/search_industry"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_56dp"
        android:layout_marginHorizontal="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:background="@drawable/background_edit_text_search"
        android:backgroundTint="?attr/colorSurfaceContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <!--Строка ввода-->
    <EditText
        android:id="@+id/edt_search_industry"
        style="@style/TextStyleRegular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_8dp"
        android:background="?attr/colorSurfaceContainer"
        android:ellipsize="end"
        android:hint="@string/industry_hint"
        android:inputType="text"
        android:maxLines="2"
        android:minHeight="@dimen/size_50dp"
        android:singleLine="true"
        android:textAppearance="@style/TextStyleRegular"
        android:textColorHint="?attr/colorOnSecondary"
        app:layout_constraintBottom_toBottomOf="@+id/search_industry"
        app:layout_constraintEnd_toStartOf="@+id/clear_search_industry"
        app:layout_constraintStart_toStartOf="@+id/search_industry"
        app:layout_constraintTop_toTopOf="@id/search_industry" />

    <!-- Иконка очистить поиск -->
    <ImageView
        android:id="@+id/clear_search_industry"
        android:layout_width="@dimen/size_48dp"
        android:layout_height="@dimen/size_48dp"
        android:scaleType="center"
        android:src="@drawable/ic_close"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/search_industry"
        app:layout_constraintEnd_toEndOf="@+id/search_industry"
        app:layout_constraintTop_toTopOf="@+id/search_industry" />

    <!-- Иконка поиск -->
    <ImageView
        android:id="@+id/search_icon_industry"
        android:layout_width="@dimen/size_48dp"
        android:layout_height="@dimen/size_48dp"
        android:scaleType="center"
        android:src="@drawable/ic_search"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/search_industry"
        app:layout_constraintEnd_toEndOf="@+id/search_industry"
        app:layout_constraintTop_toTopOf="@+id/search_industry" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/size_8dp"
        app:layout_constraintBottom_toTopOf="@+id/button_industry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_industry">

        <LinearLayout
            android:id="@+id/industry_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <!--Плейсхолдер ошибки-->
            <ImageView
                android:id="@+id/img_industry_error"
                android:layout_width="328dp"
                android:layout_height="223dp"
                android:src="@drawable/placeholder_empty_industry_list" />

            <!--Текст ошибки-->
            <TextView
                android:id="@+id/txt_industry_error"
                style="@style/TextStyleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/error_industry" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <!--Список-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_16dp"
            android:layout_marginEnd="@dimen/size_4dp"
            android:visibility="visible"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/item_industry" />
    </FrameLayout>

    <!--Кнопка выбрать-->
    <TextView
        android:id="@+id/button_industry"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginHorizontal="@dimen/size_16dp"
        android:layout_marginBottom="@dimen/size_24dp"
        android:background="@drawable/background_button_industry"
        android:gravity="center"
        android:text="@string/industry_button_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
